<resources>
    <string name="app_name">Hackathon Natura</string>
    <string name="aviso_qrcode">É preciso permissão da câmera para leitura do QRCODE</string>
    <string name="ler_qrcode">LER QRCODE</string>
    <string name="entrar">ENTRAR</string>
    <string name="registrados">REGISTRADOS</string>
    <string name="anonimos">ANÔNIMOS</string>
    <string name="anonimo_titulo">Registrar\nParticipante Anônimo</string>
    <string name="name">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="registrar">REGISTRAR</string>
    <string name="anonimo">ANÔNIMO</string>
    <string name="anonimo_hint">Anônimo</string>
    <string name="phone_number">Telefone</string>
    <string name="register">Registrar</string>
    <string name="aviso_lista">SUA LISTA DE PRESENÇA\nESTÁ VAZIA</string>
    <string name="registrar_anonimo">Registrar Anônimo</string>
    <string name="aviso_lista_anonimos">SUA LISTA DE ANÔNIMOS\nESTÁ VAZIA</string>
    <string name="registrar_an_nimo">REGISTRAR ANÔNIMO</string>
    <string name="registrar_presen_a">REGISTRAR PRESENÇA</string>
    <string name="ok">OK</string>
    <string name="dialog_success_message">[USER] registrado(a) com sucesso!</string>
    <string name="dialog_code">Código: </string>
    <string name="dialog_code_value">999999</string>
    <string name="nome_cn_vazio">É necessário informar o nome da CN.</string>
</resources>
